bottom navigation and fragments added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="white_500">#FFFFFFFF</color>
+    <color name="gray_700">#B8B7BA</color>
+    <color name="green_200">#D7EF7F</color>
+    <color name="green_700">#A6CE16</color>
+    <color name="green_dark">#ACCB39</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="secondary_variant_color">#707070</color>
+    <color name="primary_text_color">#47505A</color>
+    <color name="secondary_text_color">#647039</color>
+    <color name="text_color">#3A460D</color>
+    <color name="secondary_bg_color">#EBFFA2</color>
+    <color name="card_small_bg">#EFF5CA</color>
 </resources>
