--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.HomeFragment">
+    tools:context=".ui.HomeFragment"
+    android:padding="10dp">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/name_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="58dp"
+        android:layout_marginTop="18dp"
+        android:fontFamily="@font/montserrat_alternates"
+        android:text="@string/hello_john"
+        android:textColor="@color/primary_text_color"
+        android:textStyle="bold"
+        android:textSize="22sp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/pizza_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="HomeFragment"
-        android:gravity="center"/>
+        android:layout_below="@id/name_text_view"
+        android:layout_marginTop="20dp"
+        />
 
-</FrameLayout>
+</RelativeLayout>
