--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -9,6 +9,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="Order Fragment"
+        android:fontFamily="@font/montserrat_alternates"
+        android:gravity="center"/>
 
 </FrameLayout>
