--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Delizza" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Delizza" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">@color/gray_700</item>
@@ -19,6 +19,6 @@
 
     <style name="myCustomMenuTextAppearance" parent="@android:style/TextAppearance.Widget.IconMenu.Item">
         <item name="android:textColor">@color/black</item>
-        <item name="font"></item>
+        <item name="font">@font/montserrat_alternates</item>
     </style>
 </resources>
