--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,11 @@
         android:id="@+id/homeFragment"
         android:name="com.example.delizza.ui.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_singlePizzaFragment"
+            app:destination="@id/singlePizzaFragment" />
+    </fragment>
     <fragment
         android:id="@+id/orderFragment"
         android:name="com.example.delizza.ui.OrderFragment"
@@ -16,7 +20,7 @@
         tools:layout="@layout/fragment_order" />
     <fragment
         android:id="@+id/singlePizzaFragment"
-        android:name="com.example.delizza.SinglePizzaFragment"
+        android:name="com.example.delizza.ui.SinglePizzaFragment"
         android:label="fragment_single_pizza"
         tools:layout="@layout/fragment_single_pizza" />
 </navigation>
